New icon and logo + submission files

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
     <style name="ActionBar.Solid.YourWords.NoTitle"
         parent="@style/ActionBar.Solid.YourWords">
         <item name="displayOptions">useLogo|showHome</item>
-        <item name="logo">@drawable/ic_launcher</item>
+        <item name="logo">@drawable/ic_logo</item>
     </style>
     <style name="WordsListStyle">
         <item name="android:choiceMode">none</item>
